--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,5 @@
-<div fxLayout="column">
+<div class="card">
+    <p>Id: {{car.id}}</p>
     <p>Brand: {{car.brand}}</p>
     <p>Model: {{car.model}}</p>
     <p>KM: {{car.km}}</p>
