--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container dashboard-outer" fxLayout="row wrap" fxLayoutAlign="space-between center" infiniteScroll
+<div class="container dashboard-outer" fxLayout="row wrap" fxLayoutAlign="start center" infiniteScroll
     [infiniteScrollDisabled]="infiniteScrollDisabled" [infiniteScrollDistance]="0" [scrollWindow]="true"
     [infiniteScrollThrottle]="100" (scrolled)="onScroll()">
 
