--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,4 +1,52 @@
 .card {
-    border: 1px solid red;
+    position: relative;
+    border: 2px solid #ebebeb;
+    box-shadow: 0 2px 1px -1px #0003, 0 1px 1px #00000024, 0 1px 3px #0000001f;
     border-radius: 6px;
+    gap: 20px;
+    padding: 30px 15px 20px;
+    .id {
+        text-align: center;
+        position: absolute;
+        font-size: 16px;
+        font-weight: bold;
+        background: #898282;
+        width: 40px;
+        height: 25px;
+        color: #fff;
+        line-height: 24px;
+        left: 1px;
+        top: 1px;
+        border-top-left-radius: 6px;
+        border-bottom-right-radius: 6px;
+    }
+    .title {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .details {
+        gap: 20px;
+
+        .spec {
+            min-width: 80px;
+
+            .heading {
+                font-size: 13px;
+                font-weight: bold;
+                color: rgb(171, 163, 163);
+            }
+
+            .value {
+                font-weight: bold;
+                font-size: 15px;
+            }
+
+            &.color {
+                height: 34px;
+                border: 1px solid #000;
+                border-radius: 5px;
+            }
+        }
+    }
 }
