--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,7 +1,12 @@
 .dashboard-outer {
     gap: 30px;
-    
+
     .card-outer {
         width: 350px;
+    }
+    .button-container {
+        position: fixed;
+        bottom: 6%;
+        right: 8%;
     }
 }
