--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 mat-toolbar {
-    margin-bottom: 20px;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 
     .user-details {
         gap: 15px;
