--- a/src/app/components/car-form/car-form.component.html
+++ b/src/app/components/car-form/car-form.component.html
@@ -98,8 +98,8 @@
                 <input matInput formControlName="piece" placeholder="Piece">
               </mat-form-field>
               <mat-form-field appearance="outline">
-                <mat-label>Problem</mat-label>
-                <input matInput formControlName="problem" placeholder="Problem">
+                <mat-label>Amount</mat-label>
+                <input matInput formControlName="amount" placeholder="Amount">
               </mat-form-field>
               <button mat-icon-button color="warn" (click)="deleteDamages(i)">
                 <mat-icon>delete_forever</mat-icon>
