scroll issue fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,5 @@
 mat-toolbar {
-    position: fixed;
-    top: 0;
-    z-index: 1;
+    margin-bottom: 20px;
 
     .user-details {
         gap: 15px;
